1-4 (22-August-2014)

*** Yaswanth ***
- Added ACL (Reverted back)

*** Jitendra ***
- Quickbooks Conact Sync

*** Saikiran ***
- International Characters in Help Scout, Zendesk, Facebook widgets.

*** Farah ***
- DTMF (dailpad) added to Twilio call.
- New Task UI is default UI.

*** Bhasuri ***
- Added Set Property node in Utilities catalog
- Added limit to  stop the campaign after 100 actions
- Added maximum limit to the nodes to be added in a campaign 

*** Naresh ***
- Powered by Agile bug fix in paid accounts
- Removed dependency on contact owner while adding task, note etc from campaigns


1-3 (14-August-2014)

*** Yaswanth ***
- Added live chat
- Excluded formbuilder paths in page speed configuration
- Redirection link to choose-domain changed to register page. Single page sign-up
- Added backward compatibilty to keyword search API call.


*** Naresh ***
- Allowed email-ids having domain name upto 10 characters in Send Email node.

*** Saikiran ***
- Ellipsing the value of the Custom fields, if their width is bigger than the width of the column.

*** Sukanya ***
- Renamed "#google-apps" link to "#sync".

1-2 (11-August-2014)

*** Yaswanth ***
- Sync Framework for data sync integrations
- Google contacts sync fix. Importing notes, websites

- Added condition which checks available count in reports before sending when user chose to send now option from dashboard. If there are not matching results error message is shown in UI
- Optimized contact delete and owner change bulk operations

*** Naresh ***
- Added BCC field in campaign Send Email node.
- Restricted conversion of urls within href only.
- Disabled navigation to workflows on saving Campaign.
- Custom fields epoch time conversion to Date.

*** Jitendra ***
- Implemented Sync Framework for data sync from third party to agilecrm.
- Implemented Shopify Apps for data sync.
- Shopify data sync. Importing contacts,notes,payments,tags,orders and order events.