@@ -18,6 +18,7 @@
 			<li class="milestones-tab"><a href="#milestones">Milestones</a></li>
 		<!-- <li class="menu-settings-tab"><a href="#menu-settings">Menu Settings</a></li> -->
             <li class="stats-tab"><a href="#email-stats">Email Stats</a></li>
+			<li class="tag-management-tab"><a href="#tag-management">Tag Management</a></li>
 			<li class="integrations-tab"><a href="#integrations">Integrations</a></li>
 		</ul>
 		<div class="tab-content">
